force-app/main/default/objects/PedidoDeCompra__c/fields/FechaDisenoFabrica__c.field-meta.xml
<CustomField>
    <fullName>FechaDisenoFabrica__c</fullName>
    <label>Fecha diseño a fábrica</label>
    <type>Date</type>
</CustomField>