force-app/main/default/objects/PedidoDeCompra__c/fields/FechaInfoDisenadores__c.field-meta.xml
<CustomField>
    <fullName>FechaInfoDisenadores__c</fullName>
    <label>Fecha entrega info a diseñador</label>
    <type>Date</type>
</CustomField>