force-app/main/default/objects/PedidoDeCompra__c/fields/FechaProduccionFinalizada__c.field-meta.xml
<CustomField>
    <fullName>FechaProduccionFinalizada__c</fullName>
    <label>Fecha producción finalizada</label>
    <type>Date</type>
</CustomField>