force-app/main/default/objects/PedidoDeCompra__c/fields/FechaSolicitudBookingInterna__c.field-meta.xml
<CustomField>
    <fullName>FechaSolicitudBookingInterna__c</fullName>
    <label>Fecha solicitud booking interna</label>
    <type>Date</type>
</CustomField>