force-app/main/default/objects/PedidoDeCompra__c/fields/FechaSolicitudBookingNaviera__c.field-meta.xml
<CustomField>
    <fullName>FechaSolicitudBookingNaviera__c</fullName>
    <label>Fecha solicitud booking naviera</label>
    <type>Date</type>
</CustomField>