force-app/main/default/objects/PedidoDeCompra__c/fields/fotos_cargue_cont__c.field-meta.xml
<CustomField>
    <fullName>fotos_cargue_cont__c</fullName>
    <defaultValue>false</defaultValue>
    <description>de uso del sistema</description>
    <label>c_Fotos cargue contenedor</label>
    <type>Checkbox</type>
</CustomField>