force-app/main/default/objects/PedidoDeCompra__c/fields/fotos_fin_produccion__c.field-meta.xml
<CustomField>
    <fullName>fotos_fin_produccion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>de uso del sistema</description>
    <label>c_Fotos fin produccion</label>
    <type>Checkbox</type>
</CustomField>