force-app/main/default/objects/PedidoDeCompra__c/fields/GastosEnPuerto__c.field-meta.xml
<CustomField>
    <fullName>GastosEnPuerto__c</fullName>
    <description>(Cambio Documentos +  Certificado Origen) * Nro de Contenedores</description>
    <formula>Numero_de_Contenedores__c * (CambioDocumentos__c +  CertificadoOrigen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Document changes + Certificate of Origin) * Number of Containers</inlineHelpText>
    <label>Gastos en Puerto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>