force-app/main/default/objects/PedidoDeCompra__c/fields/GastosInspeccion__c.field-meta.xml
<CustomField>
    <fullName>GastosInspeccion__c</fullName>
    <description>Inspección X Entrega *  Nro. Inspecciones * Nro. de Contenedores</description>
    <formula>InspeccionXEntrega__c *  NroInspecciones__c * Numero_de_Contenedores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inspection per delivery * number of inspections * number of containers</inlineHelpText>
    <label>Gastos Inspección</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>