force-app/main/default/objects/PedidoDeCompra__c/fields/Grupaje__c.field-meta.xml
<CustomField>
    <fullName>Grupaje__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para uso de compras</description>
    <label>Grupaje (carga sin fotos)</label>
    <type>Checkbox</type>
</CustomField>