force-app/main/default/objects/PedidoDeCompra__c/fields/HBL__c.field-meta.xml
<CustomField>
    <fullName>HBL__c</fullName>
    <label>HBL</label>
    <length>40</length>
    <type>Text</type>
</CustomField>