force-app/main/default/objects/PedidoDeCompra__c/fields/Importe_Venta_Neto_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Venta_Neto_Nuevo__c</fullName>
    <description>Ademas de aportaciones y convenios, toma en cuenta incrementos puntuales (si los hay)</description>
    <label>Importe Venta Neto</label>
    <summarizedField>PedidoLineItem__c.Importe_Venta_Neto_Nuevo__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>