force-app/main/default/objects/PedidoDeCompra__c/fields/ImporteAdelantado__c.field-meta.xml
<CustomField>
    <fullName>ImporteAdelantado__c</fullName>
    <description>Costo Origen *  Porcentaje Deposito A Fabrica</description>
    <formula>IF(OR(ISBLANK(Monto_deposito__c), Monto_deposito__c == 0),
CostoOrigen__c * PorcentajeDepositoAFabrica__c,
Monto_deposito__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Origin Cost * Deposit Percentage to Factory</inlineHelpText>
    <label>Monto Depósito (estándar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>