force-app/main/default/objects/PedidoDeCompra__c/fields/ImporteAportaciones__c.field-meta.xml
<CustomField>
    <fullName>ImporteAportaciones__c</fullName>
    <label>Importe Aportaciones</label>
    <summarizedField>PedidoLineItem__c.ImporteAportaciones__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>