force-app/main/default/objects/PedidoDeCompra__c/fields/ImporteConvenio__c.field-meta.xml
<CustomField>
    <fullName>ImporteConvenio__c</fullName>
    <label>Importe Convenio</label>
    <summarizedField>PedidoLineItem__c.ImporteConvenio__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>