force-app/main/default/objects/PedidoDeCompra__c/fields/ImporteFacturado__c.field-meta.xml
<CustomField>
    <fullName>ImporteFacturado__c</fullName>
    <label>Importe Facturado</label>
    <summarizedField>PedidoLineItem__c.PrecioDeVentaTot__c</summarizedField>
    <summaryFilterItems>
        <field>PedidoLineItem__c.EstadoDeFacturaDeCliente__c</field>
        <operation>notEqual</operation>
        <value>Cancelada</value>
    </summaryFilterItems>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>