force-app/main/default/objects/PedidoDeCompra__c/fields/ImporteFacturaProveedor__c.field-meta.xml
<CustomField>
    <fullName>ImporteFacturaProveedor__c</fullName>
    <label>Importe Factura Proveedor</label>
    <summarizedField>PedidoLineItem__c.CostoOrigenTot__c</summarizedField>
    <summaryFilterItems>
        <field>PedidoLineItem__c.EstadoDeFacturaDeProveedor__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>PedidoLineItem__c.EstadoDeFacturaDeProveedor__c</field>
        <operation>notEqual</operation>
        <value>Cancelada</value>
    </summaryFilterItems>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>