force-app/main/default/objects/PedidoDeCompra__c/fields/ImportePorFacturar__c.field-meta.xml
<CustomField>
    <fullName>ImportePorFacturar__c</fullName>
    <label>Importe por Facturar</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>