force-app/main/default/objects/PedidoDeCompra__c/fields/In_Store_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Date__c</fullName>
    <inlineHelpText>Field taken from the Customer PO</inlineHelpText>
    <label>In-Store Date</label>
    <type>Date</type>
</CustomField>