force-app/main/default/objects/PedidoDeCompra__c/fields/Incremento_Puntual__c.field-meta.xml
<CustomField>
    <fullName>Incremento_Puntual__c</fullName>
    <description>Suma de los Incrementos puntuales para el Pedido</description>
    <label>Incremento Puntual</label>
    <summarizedField>PedidoLineItem__c.Importe_Incremento_Puntual__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>