force-app/main/default/objects/PedidoDeCompra__c/fields/Indicador_Booking__c.field-meta.xml
<CustomField>
    <fullName>Indicador_Booking__c</fullName>
    <formula>IF ( Solicitud_booking_enviada__c , IMAGE ( &quot;/img/samples/flag_green.gif&quot; , &quot;Booking Listo&quot; ) ,
IF ( ISBLANK ( Fecha_Minima_Embarque__c ) , IMAGE ( &quot;/img/msg_icons/warning16.png&quot; , &quot;Sin ISW&quot; ) &amp; &quot; Sin ISW&quot; ,
IF ( Fecha_Minima_Embarque__c - TODAY() &lt;= 0 , IMAGE ( &quot;/img/msg_icons/error16.png&quot; , &quot;Violación ISW&quot; ) &amp; &quot; Sin booking después de ISW&quot; ,
IF ( Fecha_Minima_Embarque__c - TODAY() &lt;= 45 , IMAGE ( &quot;/img/samples/flag_red.gif&quot; , &quot;Booking Cerca&quot; ) &amp; &quot; Faltan &quot; &amp; TEXT ( Fecha_Minima_Embarque__c - TODAY() ) &amp; &quot; días&quot; ,
IMAGE ( &quot;/img/samples/flag_yellow.gif&quot; , &quot;Booking Pendiente&quot; )  &amp; &quot; Faltan &quot; &amp; TEXT ( Fecha_Minima_Embarque__c - TODAY() ) &amp; &quot; días&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador Booking</label>
    <type>Text</type>
</CustomField>