force-app/main/default/objects/PedidoDeCompra__c/fields/info_a_disenadores__c.field-meta.xml
<CustomField>
    <fullName>info_a_disenadores__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is marked when the order owner shares the packaging information with the designer via Dropbox</inlineHelpText>
    <label>Entrega info a diseñador</label>
    <type>Checkbox</type>
</CustomField>