force-app/main/default/objects/PedidoDeCompra__c/fields/Informe_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Informe_de_Auditoria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>De uso del sistema, cuando se adjunta el informe de auditoria se marca el campo mediante un proceso automatizado.</description>
    <label>c_Informe de Auditoría</label>
    <type>Checkbox</type>
</CustomField>