force-app/main/default/objects/PedidoDeCompra__c/fields/Inspeccion_pagada__c.field-meta.xml
<CustomField>
    <fullName>Inspeccion_pagada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspección pagada</label>
    <type>Checkbox</type>
</CustomField>