force-app/main/default/objects/PedidoDeCompra__c/fields/Internal_Link__c.field-meta.xml
<CustomField>
    <fullName>Internal_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/apex/PortalPedidoPackingList?orderName=&apos; + Name, &quot;Editar Packing List&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing List</label>
    <type>Text</type>
</CustomField>