force-app/main/default/objects/PedidoDeCompra__c/fields/Is_Manual_Booking_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Booking_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determina si la tarea de envio de booking manual ha sido enviada</description>
    <label>Booking Manual Enviado</label>
    <type>Checkbox</type>
</CustomField>