force-app/main/default/objects/PedidoDeCompra__c/fields/justificante_de_pago__c.field-meta.xml
<CustomField>
    <fullName>justificante_de_pago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>de uso del sistema</description>
    <label>c_Justificante de pago</label>
    <type>Checkbox</type>
</CustomField>