force-app/main/default/objects/PedidoDeCompra__c/fields/LC_Number__c.field-meta.xml
<CustomField>
    <fullName>LC_Number__c</fullName>
    <inlineHelpText>Letter of Credit</inlineHelpText>
    <label>LC Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>