force-app/main/default/objects/PedidoDeCompra__c/fields/Loading_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Loading_Inspection__c</fullName>
    <description>Company responsible for the loading inspection.</description>
    <inlineHelpText>Select the company that performs the loading inspection.</inlineHelpText>
    <label>Loading Inspection by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SELF AUDIT</fullName>
                <label>SELF INSPECTION</label>
            </value>
            <value>
                <fullName>VERIFY</fullName>
            </value>
            <value>
                <fullName>QIMA</fullName>
            </value>
            <value>
                <fullName>TELESCOPE</fullName>
            </value>
            <value>
                <fullName>ASIA ABS</fullName>
            </value>
            <value>
                <fullName>KROM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>