force-app/main/default/objects/PedidoDeCompra__c/fields/MBL__c.field-meta.xml
<CustomField>
    <fullName>MBL__c</fullName>
    <label>MBL</label>
    <length>40</length>
    <type>Text</type>
</CustomField>