force-app/main/default/objects/PedidoDeCompra__c/fields/Monto_Balance_estimado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Balance_estimado__c</fullName>
    <formula>CostoOrigen__c -  ImporteAdelantado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Balance estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>