force-app/main/default/objects/PedidoDeCompra__c/fields/Monto_deposito__c.field-meta.xml
<CustomField>
    <fullName>Monto_deposito__c</fullName>
    <description>Monto del deposito al proveedor</description>
    <label>Monto depósito (efectivo)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>