force-app/main/default/objects/PedidoDeCompra__c/fields/Muestras__c.field-meta.xml
<CustomField>
    <fullName>Muestras__c</fullName>
    <label>Muestras</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>