force-app/main/default/objects/PedidoDeCompra__c/fields/N_de_Seal__c.field-meta.xml
<CustomField>
    <fullName>N_de_Seal__c</fullName>
    <label>N° de SEAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>