force-app/main/default/objects/PedidoDeCompra__c/fields/Nombre_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Proveedor__c</fullName>
    <formula>Proveedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Proveedor</label>
    <type>Text</type>
</CustomField>