force-app/main/default/objects/PedidoDeCompra__c/fields/NroContenedores__c.field-meta.xml
<CustomField>
    <fullName>NroContenedores__c</fullName>
    <description>Inicialmente simplificado siempre sera 1</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de Contenedores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>