force-app/main/default/objects/PedidoDeCompra__c/fields/NroInspecciones__c.field-meta.xml
<CustomField>
    <fullName>NroInspecciones__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nº Inspecciones</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>