force-app/main/default/objects/PedidoDeCompra__c/fields/Numero_de_Contenedores__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Contenedores__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Número de Contenedores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>