force-app/main/default/objects/PedidoDeCompra__c/fields/Numero_de_Factura_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Factura_Proveedor__c</fullName>
    <label># Factura proveedor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>