force-app/main/default/objects/PedidoDeCompra__c/fields/Numero_de_Facturas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Facturas__c</fullName>
    <description>Cantidad de facturas</description>
    <label>Número de Facturas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>