force-app/main/default/objects/PedidoDeCompra__c/fields/Numero_de_Orden__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Orden__c</fullName>
    <label>PO Cliente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>