force-app/main/default/objects/PedidoDeCompra__c/fields/Numero_de_Packig_List__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Packig_List__c</fullName>
    <label>Número de Packig List</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>