force-app/main/default/objects/PedidoDeCompra__c/fields/NumeroDeContenedor__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeContenedor__c</fullName>
    <label>Número de Contenedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>