force-app/main/default/objects/PedidoDeCompra__c/fields/OAC_Cliente__c.field-meta.xml
<CustomField>
    <fullName>OAC_Cliente__c</fullName>
    <description>Campo para incluir la información de la Open Account Credit que nos abren los Clientes</description>
    <inlineHelpText>Open account credit issued to us by Customers</inlineHelpText>
    <label>OAC Cliente</label>
    <length>250</length>
    <type>Text</type>
</CustomField>