force-app/main/default/objects/PedidoDeCompra__c/fields/OtrosCostos__c.field-meta.xml
<CustomField>
    <fullName>OtrosCostos__c</fullName>
    <description>Muestras +  Comisión Administrativa</description>
    <formula>Muestras__c +  ComisionAdministrativa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Samples + administrative fee</inlineHelpText>
    <label>Otros Costos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>