force-app/main/default/objects/PedidoDeCompra__c/fields/Packaging_enviado_al_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Packaging_enviado_al_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The packaging has been sent to the Customer for commercial approval by the buyer and their import department</inlineHelpText>
    <label>Packaging enviado al cliente</label>
    <type>Checkbox</type>
</CustomField>