force-app/main/default/objects/PedidoDeCompra__c/fields/Packagings_aprobados_por_el_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Packagings_aprobados_por_el_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The packaging has been definitively approved by all involved areas of the Customer</inlineHelpText>
    <label>Packaging aprobado por cliente</label>
    <type>Checkbox</type>
</CustomField>