force-app/main/default/objects/PedidoDeCompra__c/fields/Planificacion__c.field-meta.xml
<CustomField>
    <fullName>Planificacion__c</fullName>
    <formula>Proforma__r.Oportunidad__r.PlanificacionComercial__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planificación</label>
    <type>Text</type>
</CustomField>